# myoj

./: .gitignore  README.md
dev_docs/: algorithm.md  (+10 more)
ojcpp/: CMakeLists.txt
ojcpp/codech/: algo_common.cpp  algo_common.h  codech_def.h  codech_main.cpp  codech_util.h
ojcpp/company/: amazon_fresh.cpp  amazon_gcd.cpp  amazon_maze.cpp  amazon_memo.txt  amazon_memo2.txt  amazon_rightrotation.cpp  autodesk.cpp  autodesk_2.cpp  autodesk_python.py  datarobot_countseq.cpp  fb_2019.cpp  goldmansach.cpp  goldmansachs_2021.cpp  jpmc.cpp  jump_minimum_ticket_cost.cpp  jump_polish.cpp  jumptrading_memo.txt
ojcpp/design/: chat_server.cpp  parking_slot.cpp  twitter.cpp
ojcpp/hht/: 001_assignment.cpp  002_singleton.cpp  003_search_matrix.cpp  004_replacespace.cpp  006_rebuildbintree.cpp  008_rotate_array.cpp  009_fibonacci.cpp  010_numberof1.cpp  012_print_1ton.cpp  013_delete_node.cpp  014_even_before_odd.cpp  015_kth_from_tail_list.cpp  016_reverse_list.cpp  017_merge_list.cpp  018_hassubtree.cpp  019_bst_mirror.cpp  020_printmatrix.cpp  021_minstack.cpp  022_stack_order.cpp  023_traversal_tree_layer.cpp  024_bstpostorder.cpp  025_bstsum.cpp  026_copylist.cpp  027_bst_to_list.cpp  028_permutation.cpp  029_morethanhalf.cpp  030_topkelement.cpp  031_maxsum_subarr.cpp  032_number_of_1.cpp  033_arrtosmallestfigure.cpp  034_isugly.cpp  035_first_non_repeat.cpp  036_reversepairinarr.cpp  037_first_common_node.cpp  038_numerofk.cpp  039_tree_depth.cpp  040_appear_once.cpp  041_continuousseq.cpp  042_reverse_str.cpp  043_dice_probability.cpp  (+7 more)
ojcpp/lintcode/: 1377_m_findsubstr.cpp  386_m_longestsubstrwithkdistinct.cpp  533_m_twosumclosest.cpp  597_e_subtreemaxavg.cpp  613_m_highfive.cpp
ojcpp/ytilidoc/: vf1_whole_square.cpp  vf2_similar_integer.cpp  vf3_arithmetic_seq.cpp  vf4_point_cartesian.cpp  vf_2018_hex.cpp  vf_2018_maxapple.cpp
(+528 files in other folders)
